--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
     "express": "^4.18.2",
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.12.1"
+    "mongodb": "^4.12.1",
+    "multer": "^1.4.5-lts.1"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^8.5.9",
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/joi": "^17.2.3",
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.8.5",
     "concurrently": "^7.4.0",
     "dotenv-cli": "^6.0.0",
