--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "joi": "^17.6.3",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.12.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
